package org_desafio2.dominio;

public enum StatusJogo {
    ABERTO,
    ENCERRADO
}
