package org_desafio2.pontuacao;

import org_desafio2.dominio.Palpite;

public interface RegraPontuacao {

    int calcular(Palpite palpite);
}
